--- a/style/index.css
+++ b/style/index.css
@@ -48,14 +48,56 @@ ul li {
   width: 80%;
 }
 
+.header-form-container {
+  background: white;
+}
+.header-form-container div {
+  padding: 1rem;
+  margin-right: 100%;
+}
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
-  background: url(../assets/hero.jpg) no-repeat center top;
+  background: url(../assets/hero.jpg) no-repeat center top #0000005b;
   background-size: cover;
   height: 100vh;
+  align-self: stretch;
+  color: white;
+}
+header h1 {
+  font-size: 6rem;
+  margin: 0;
+}
+header h2 {
+  color: #1da9ef;
+  margin: 0;
+}
+header p {
+  color: #ef1d1d;
+  color: #1da9ef;
+  color: #fff;
+}
+
+main {
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  justify-content: space-between;
+  height: 200vh;
+}
+
+.color-overlay {
+  background: #0000009b;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 .nav-logo {
@@ -65,6 +107,40 @@ header {
 .nav-btn {
   background: #fff;
   border-radius: 50pc;
+  color: #000000;
+}
+
+.services-container,
+.testimonial-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  min-height: 400px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.card p,
+.card a {
+  padding: 1rem;
+  margin: 0;
+}
+
+.services-card-img {
+  width: 100%;
+}
+
+.emphasize {
+  padding: 1rem;
+  border: 1px solid black;
+  font-weight: bold;
+  font-size: larger;
 }
 
 /*# sourceMappingURL=index.css.map */
