adjusted style further.

--- a/style/index.css
+++ b/style/index.css
@@ -61,6 +61,7 @@ form h2 {
 input,
 textarea,
 select {
+  font-size: 16px;
   width: calc(100% - 18px);
   padding: 10px;
   margin-bottom: 20px;
@@ -96,7 +97,15 @@ div a {
   color: #1da9ef;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -126,12 +135,13 @@ header p {
 }
 
 main {
-  width: 1200px;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-items: center;
   justify-content: space-between;
   height: 200vh;
+  margin: 5rem 0;
 }
 
 .color-overlay {
@@ -163,6 +173,7 @@ main {
   align-items: center;
   width: 350px;
   min-height: 400px;
+  background: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
   border-radius: 8px;
   overflow: hidden;
