--- a/style/_formStyle.scss
+++ b/style/_formStyle.scss
@@ -40,6 +40,7 @@ form {
 input,
 textarea,
 select {
+    font-size: 16px;
     width: calc(100% - 18px);
     // height: 1.5rem;
     padding: 10px;
