--- a/style/_headerStructure.scss
+++ b/style/_headerStructure.scss
@@ -46,5 +46,6 @@ width: 50%;
         display: flex;
         flex-direction: column;
         width: 80%;
+        justify-items: center;
     }
 }
