--- a/style/index.css
+++ b/style/index.css
@@ -46,6 +46,7 @@ ul li {
   display: flex;
   flex-direction: column;
   width: 80%;
+  justify-items: center;
 }
 
 form {
@@ -66,10 +67,6 @@ select {
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #1da9ef;
-}
-
-select {
-  width: auto;
 }
 
 input::placeholder {
@@ -98,8 +95,6 @@ div a {
 }
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
 
@@ -110,6 +105,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 header {
@@ -135,12 +131,11 @@ header p {
 }
 
 main {
-  width: 70%;
   display: flex;
   flex-direction: column;
   justify-items: center;
   justify-content: space-between;
-  height: 200vh;
+  height: 300vh;
   margin: 5rem 0;
 }
 
@@ -157,7 +152,7 @@ main {
 
 .nav-btn {
   background: #fff;
-  border-radius: 50pc;
+  border-radius: 50px;
   color: #000000;
 }
 
@@ -165,6 +160,44 @@ main {
 .testimonial-container {
   display: flex;
   justify-content: space-between;
+  width: 1200px;
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+
+.cta-container {
+  grid-column: 2/3;
+  text-align: center;
+}
+
+.about-us-container {
+  grid-column: 2/3;
+}
+
+.services-wrapper,
+.about-wrapper {
+  background: #5379921b;
+  padding: 8rem 0;
+}
+
+.about-us-container {
+  width: 90%;
+  margin: 0 auto;
+  line-height: 1.5rem;
+}
+.about-us-container h2 {
+  margin-bottom: 0.5rem;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+.wrapper h2 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  color: #1da9ef;
+  padding-bottom: 0.5rem;
 }
 
 .card {
@@ -183,16 +216,36 @@ main {
   padding: 1rem;
   margin: 0;
 }
+.card strong,
+.card .testimonial-sub {
+  padding: 0;
+  text-align: left;
+}
+.card .emphasize {
+  padding: 1rem;
+  border: 1px solid black;
+  font-weight: bold;
+  font-size: larger;
+}
 
 .services-card-img {
   width: 100%;
 }
 
-.emphasize {
+.cta-btn {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
+  border-radius: 50px;
   padding: 1rem;
-  border: 1px solid black;
-  font-weight: bold;
-  font-size: larger;
+  margin: 3rem auto 0;
+  display: block;
+  width: 250px;
+  text-decoration: none;
+  background: #1da9ef;
+  color: white;
+  transition: background-color 200ms;
+}
+.cta-btn:hover {
+  background: #2371a0;
 }
 
 /*# sourceMappingURL=index.css.map */
