--- a/style/index.scss
+++ b/style/index.scss
@@ -3,8 +3,6 @@
 @use 'formStyle';
 
 * {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 
@@ -15,6 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 header {
@@ -30,7 +29,7 @@ header {
     }
 
     p {
-        color: rgb(239, 29, 29);
+        color: v.$dark-accent;
         color: v.$light-accent;
         color: #fff;
     }
@@ -42,12 +41,11 @@ header {
 }
 
 main {
-    width: 70%;
     display: flex;
     flex-direction: column;
     justify-items: center;
     justify-content: space-between;
-    height: 200vh;
+    height: 300vh;
     margin: 5rem 0;
 }
 
@@ -64,7 +62,7 @@ main {
 
 .nav-btn {
     background: #fff;
-    border-radius: 50pc;
+    border-radius: 50px;
     color: #000000;
 }
 
@@ -73,6 +71,45 @@ main {
 .testimonial-container {
     display: flex;
     justify-content: space-between;
+    width: 1200px;
+    // margin: auto;
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+.cta-container{
+grid-column: 2/3;
+text-align: center;
+}
+.about-us-container {
+    grid-column: 2/3;
+}
+
+.services-wrapper,
+.about-wrapper {
+    background: #5379921b;
+    padding: 8rem 0;
+}
+
+.about-us-container {
+    width: 90%;
+    margin: 0 auto;
+    line-height: 1.5rem;
+
+    h2 {
+        margin-bottom: .5rem;
+    }
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    // // grid-template-rows: 1fr 1fr;
+    h2 {
+        grid-row: 1/2;
+        grid-column: 2/3;
+        color: v.$light-accent;
+        padding-bottom: .5rem;
+    }
 }
 
 .card {
@@ -91,16 +128,39 @@ main {
         padding: 1rem;
         margin: 0;
     }
+
+    strong,
+    .testimonial-sub {
+        padding: 0;
+        text-align: left;
+    }
+
+    //needs work
+    .emphasize {
+        padding: 1rem;
+        border: 1px solid black;
+        font-weight: bold;
+        font-size: larger;
+    }
 }
 
 .services-card-img {
     width: 100%;
 }
 
-//needs work
-.emphasize {
+.cta-btn{
+    // border: 1px solid black;
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 10px;
+    border-radius: 50px;
     padding: 1rem;
-    border: 1px solid black;
-    font-weight: bold;
-    font-size: larger;
+    margin: 3rem auto 0;
+    display: block;
+    width: 250px;
+    text-decoration: none;
+    background: v.$light-accent;
+    color: white;
+    transition: background-color 200ms;
+    &:hover{
+        background: v.$light-hover;
+    }
 }
