--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,3 +1,5 @@
 $light-accent: #1da9ef;
-$dark-accent: #ef1d1d;
-$light-hover: #2371a0;
+// $light-accent: #191397;
+$dark-accent: #c30938;
+$light-hover: #2370a0b1;
+// $light-hover: #060071;
