--- a/style/_formStyle.scss
+++ b/style/_formStyle.scss
@@ -1,11 +1,15 @@
 @use 'variables' as v;
 
 form {
+ 
+    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    background: #606060b7;
     padding: 25px;
     margin: 25px;
-    // box-shadow: 0 2px 5px #f5f5f5;
-    background: #606060b7;
-
     h2 {
         margin: 0 0 .5rem;
         color: v.$light-accent;
@@ -14,9 +18,10 @@ form {
 
 input,
 textarea,
-select {
+select,
+button {
     font-size: 16px;
-    width: calc(100% - 18px);
+    width: 100%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid v.$light-accent;
@@ -27,11 +32,9 @@ input::placeholder {
 }
 
 button {
-    width: 100%;
-    padding: 10px;
+    margin-bottom: 0;
     border: none;
-    background: #1da9ef;
-    font-size: 16px;
+    background: v.$light-accent;
     font-weight: 400;
     color: #fff;
 }
@@ -44,6 +47,6 @@ div {
     padding: .5rem;
 
     a {
-        color: #1da9ef;
+        color: v.$light-accent;
     }
 }
