--- a/style/index.css
+++ b/style/index.css
@@ -5,9 +5,7 @@ header {
 .nav-container {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   width: 100%;
-  position: absolute;
 }
 
 nav {
@@ -29,6 +27,7 @@ ul li {
 .hero-container {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   align-items: center;
   height: 100%;
   gap: 1rem;
@@ -39,20 +38,14 @@ ul li {
   width: 50%;
 }
 
-.header-form-container {
-  padding: 2rem;
-}
-.header-form-container form {
+form {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  justify-items: center;
-}
-
-form {
+  flex-wrap: wrap;
+  align-content: center;
+  background: #606060b7;
   padding: 25px;
   margin: 25px;
-  background: #606060b7;
 }
 form h2 {
   margin: 0 0 0.5rem;
@@ -61,9 +54,10 @@ form h2 {
 
 input,
 textarea,
-select {
+select,
+button {
   font-size: 16px;
-  width: calc(100% - 18px);
+  width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #1da9ef;
@@ -74,17 +68,15 @@ input::placeholder {
 }
 
 button {
-  width: 100%;
-  padding: 10px;
+  margin-bottom: 0;
   border: none;
   background: #1da9ef;
-  font-size: 16px;
   font-weight: 400;
   color: #fff;
 }
 
 button:hover {
-  background: #2371a0;
+  background: #2370a0b1;
 }
 
 div {
@@ -96,6 +88,7 @@ div a {
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -111,16 +104,18 @@ body {
 header {
   background: url(../assets/hero.jpg) no-repeat center top #0000005b;
   background-size: cover;
-  height: 100vh;
-  align-self: stretch;
+  background-blend-mode: lighten;
+  min-height: 100vh;
+  width: 100%;
   color: white;
 }
 header h1 {
   font-size: 6rem;
+  font-size: clamp(2.5rem, 5vw, 6rem);
   margin: 0;
 }
 header p {
-  color: #ef1d1d;
+  color: #c30938;
   color: #1da9ef;
   color: #fff;
 }
@@ -147,13 +142,13 @@ main {
 }
 
 .nav-logo {
-  height: 100px;
+  height: 75px;
 }
 
 .nav-btn {
   background: #fff;
   border-radius: 50px;
-  color: #000000;
+  color: #1da9ef;
 }
 
 .services-container,
@@ -172,21 +167,17 @@ main {
 
 .about-us-container {
   grid-column: 2/3;
-}
-
-.services-wrapper,
-.about-wrapper {
-  background: #5379921b;
-  padding: 8rem 0;
-}
-
-.about-us-container {
   width: 90%;
   margin: 0 auto;
   line-height: 1.5rem;
 }
 .about-us-container h2 {
   margin-bottom: 0.5rem;
+}
+
+.wrapper:nth-child(2n) {
+  background: #5379921b;
+  padding: 8rem 0;
 }
 
 .wrapper {
@@ -203,7 +194,6 @@ main {
 .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 350px;
   min-height: 400px;
   background: #fff;
@@ -218,10 +208,12 @@ main {
 }
 .card strong,
 .card .testimonial-sub {
+  margin: 0 0 0 1rem;
   padding: 0;
   text-align: left;
 }
 .card .emphasize {
+  margin: auto 0.5rem;
   padding: 1rem;
   border: 1px solid black;
   font-weight: bold;
@@ -242,10 +234,10 @@ main {
   text-decoration: none;
   background: #1da9ef;
   color: white;
-  transition: background-color 200ms;
+  transition: background-color 250ms;
 }
 .cta-btn:hover {
-  background: #2371a0;
+  background: #2370a0b1;
 }
 
 /*# sourceMappingURL=index.css.map */
