--- a/style/index.scss
+++ b/style/index.scss
@@ -1,179 +1,9 @@
+
 @use 'variables' as v;
+@use 'main';
 @use 'headerStructure';
 @use 'formStyle';
+@use 'cta';
+@use 'faq';
+@use 'medium';
 
-* {
-    box-sizing: border-box;
-    scroll-behavior:smooth;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-x: hidden;
-}
-
-header {
-    background: url(../assets/hero.jpg) no-repeat center top #0000005b;
-    background-size: cover;
-    background-blend-mode: lighten;
-    min-height: 100vh;
-    width: 100%;
-    // align-self: stretch;
-    color: white;
-    // display: flex;
-    // flex-wrap: wrap;
-    // overflow-x: hidden;
-
-    h1 {
-        // font-size: 6rem;
-        font-size: 6rem;
-        font-size: clamp(2.5rem, 5vw, 6rem);
-        margin: 0;
-    }
-
-    p {
-        // color: v.$dark-accent;
-        color: v.$light-accent;
-        color: #fff;
-    }
-}
-
-.header-title-container h2 {
-    color: v.$light-accent;
-    margin: 0;
-}
-main {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    justify-content: space-between;
-
-    height: 300vh;
-    margin: 5rem 0;
-}
-
-.color-overlay {
-    background: #0000009b;
-    // background: #ffffff40;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-}
-
-.nav-logo {
-    height: 75px;
-}
-
-.nav-btn {
-    background: #fff;
-    border-radius: 50px;
-    color: v.$light-accent;
-}
-
-
-.services-container,
-.testimonial-container {
-    display: flex;
-    justify-content: space-between;
-    width: 1200px;
-    // margin: auto;
-    grid-row: 2/3;
-    grid-column: 2/3;
-}
-
-.cta-container {
-    grid-column: 2/3;
-    text-align: center;
-}
-
-.about-us-container {
-    grid-column: 2/3;
-    width: 90%;
-    margin: 0 auto;
-    line-height: 1.5rem;
-
-    h2 {
-        margin-bottom: .5rem;
-    }
-}
-
-// .services-wrapper,
-// .about-wrapper
-.wrapper:nth-child(2n) {
-    background: #5379921b;
-    padding: 8rem 0;
-}
-
-.wrapper {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-
-    // // grid-template-rows: 1fr 1fr;
-    h2 {
-        grid-row: 1/2;
-        grid-column: 2/3;
-        color: v.$light-accent;
-        padding-bottom: .5rem;
-    }
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    width: 350px;
-    min-height: 400px;
-    background: #fff;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
-    border-radius: 8px;
-    overflow: hidden;
-
-    p,
-    a {
-        padding: 1rem;
-        margin: 0;
-    }
-
-    strong,
-    .testimonial-sub {
-        margin: 0 0 0 1rem;
-        padding: 0;
-        text-align: left;
-    }
-
-    //needs work
-    .emphasize {
-        margin: auto .5rem;
-        padding: 1rem;
-        border: 1px solid black;
-        font-weight: bold;
-        font-size: larger;
-    }
-}
-
-.services-card-img {
-    width: 100%;
-}
-
-.cta-btn {
-    // border: 1px solid black;
-    box-shadow: rgb(0 0 0 / 24%) 0px 3px 10px;
-    border-radius: 50px;
-    padding: 1rem;
-    margin: 3rem auto 0;
-    display: block;
-    width: 250px;
-    text-decoration: none;
-    background: v.$light-accent;
-    color: white;
-    transition: background-color 250ms;
-
-    &:hover {
-        background: v.$light-hover;
-    }
-}
