--- a/style/_formStyle.scss
+++ b/style/_formStyle.scss
@@ -1,8 +1,7 @@
 @use 'variables' as v;
 
 form {
- 
-    
+    border-radius: v.$radius;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -25,6 +24,7 @@ button {
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid v.$light-accent;
+    border-radius: v.$radius;
 }
 
 input::placeholder {
@@ -43,10 +43,3 @@ button:hover {
     background: v.$light-hover;
 }
 
-div {
-    padding: .5rem;
-
-    a {
-        color: v.$light-accent;
-    }
-}
