--- a/style/index.css
+++ b/style/index.css
@@ -53,10 +53,14 @@ div a {
 }
 
 .color-overlay {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   background: #0000009b;
   height: 100%;
   width: 100%;
   position: absolute;
+  padding: 0;
 }
 
 .nav-logo {
@@ -67,6 +71,8 @@ div a {
   background: #fff;
   border-radius: 8px;
   color: #1da9ef;
+  padding: 0.75rem;
+  margin: auto 0;
 }
 
 .services-container,
@@ -143,8 +149,12 @@ header {
 
 .nav-container {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  width: 80%;
+  align-items: center;
+  margin: 0;
+  padding: 0 0.5rem;
+  padding-top: 0.5rem;
 }
 
 nav {
@@ -158,9 +168,13 @@ ul {
 }
 ul li {
   list-style: none;
-  text-decoration: none;
   align-items: center;
   padding: 1rem;
+}
+ul li a {
+  text-decoration: none;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
 .hero-container {
@@ -292,6 +306,43 @@ button:hover {
   .header-form-container {
     display: none;
   }
+}
+@media only screen and (max-width: 900px) {
+  nav {
+    display: none;
+  }
+
+  .nav-container {
+    justify-content: center;
+  }
+
+  .nav-logo {
+    height: 125px;
+  }
+}
+.thanks-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
+  flex-wrap: wrap;
+  align-content: space-around;
+  width: 80%;
+}
+.thanks-container h1 {
+  color: #1da9ef;
+  margin: 0;
+}
+
+.thanks-body {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/hero.jpg);
+}
+
+.thanks-p {
+  font-size: 3rem;
+  color: white;
+  margin: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
