--- a/style/index.css
+++ b/style/index.css
@@ -3,24 +3,24 @@
   scroll-behavior: smooth;
 }
 
+html {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  height: 100%;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-x: hidden;
-  position: static;
 }
 
 header {
-  background: url(../assets/hero.jpg) no-repeat center top #0000005b;
-  background-size: cover;
-  background-blend-mode: lighten;
-  min-height: 100vh;
-  align-self: stretch;
+  background: url(../assets/hero.jpg);
   color: white;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 header h1 {
   font-size: 6rem;
@@ -59,7 +59,6 @@ div a {
   background: #0000009b;
   height: 100%;
   width: 100%;
-  position: absolute;
   padding: 0;
 }
 
@@ -143,10 +142,6 @@ div a {
   width: 100%;
 }
 
-header {
-  position: relative;
-}
-
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -157,6 +152,10 @@ header {
   padding-top: 0.5rem;
 }
 
+.mb-header {
+  display: none;
+}
+
 nav {
   text-align: center;
 }
@@ -165,16 +164,26 @@ ul {
   display: flex;
   justify-content: center;
   padding: 0;
+  list-style: none;
 }
 ul li {
-  list-style: none;
-  align-items: center;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 ul li a {
   text-decoration: none;
-  font-size: 1.25rem;
   font-weight: bold;
+  padding: 0.75rem;
+  margin: 0.35rem;
+  text-align: left;
+  transition: 0.5s;
+  font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+ul li a:hover {
+  background: #fff;
+  border-radius: 8px;
+  color: #1da9ef;
+  padding: 0.75rem;
+  margin: auto 0;
 }
 
 .hero-container {
@@ -318,6 +327,27 @@ button:hover {
 
   .nav-logo {
     height: 125px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  header {
+    background: rgba(0, 0, 0, 0.621);
+    height: auto;
+  }
+
+  .header-title-container {
+    padding: 1rem;
+    width: 95%;
+  }
+
+  .nav-container {
+    width: 100%;
+    background: rgba(0, 0, 0, 0.621);
+  }
+
+  .mb-header {
+    display: block;
+    width: 100%;
   }
 }
 .thanks-container {
