--- a/style/_headerStructure.scss
+++ b/style/_headerStructure.scss
@@ -1,7 +1,8 @@
-header{
-    position: relative;
+@use 'variables' as v;
+// header{
+//     position: relative;
    
-}
+// }
 // nav items
 
 .nav-container {
@@ -14,7 +15,9 @@ header{
     padding: 0 .5rem;
     padding-top: .5rem;
 }
-
+.mb-header{
+    display: none;
+}
 nav {
     text-align: center;
 }
@@ -23,16 +26,26 @@ ul {
     display: flex;
     justify-content: center;
     padding: 0;
-
+    list-style: none;
     li {
-        list-style: none;
-        
-        align-items: center;
-        padding: 1rem;
+        padding: 1rem 0;      
         a{
             text-decoration: none;
-            font-size: 1.25rem;
             font-weight: bold;
+            padding: .75rem;
+            margin: .35rem;
+            text-align: left;
+            transition: .5s;
+            font-size: clamp(1rem, 2vmin, 1.5rem);
+            &:hover {
+                // color: white;
+                // background-color: v.$light-accent;
+                background: #fff;
+                border-radius: v.$radius;
+                color: v.$light-accent;
+                padding: .75rem;
+                margin: auto 0;
+            }
         }
     }
 }
