--- a/style/_main.scss
+++ b/style/_main.scss
@@ -4,28 +4,28 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
-
+html{
+    height: 100%;
+    margin: 0;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    height: 100%;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-x: hidden;
-    position: static;
 }
 
 header {
-    background: url(../assets/hero.jpg) no-repeat center top #0000005b;
-    background-size: cover;
-    background-blend-mode: lighten;
-    min-height: 100vh;
-    align-self: stretch;
+    background: url(../assets/hero.jpg);
+    //  no-repeat center top #0000005b;
+    // background-size: cover;
+    // background-blend-mode: lighten;
+    // min-height: 100vh;
+    // align-self: stretch;
     color: white;
-    // display: flex;
-    // flex-wrap: wrap;
-    // overflow-x: hidden;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 
     h1 {
         // font-size: 6rem;
@@ -69,7 +69,7 @@ div {
     background: #0000009b;
     height: 100%;
     width: 100%;
-    position: absolute;
+    // position: absolute;
     padding: 0;
 }
 
@@ -114,6 +114,7 @@ div {
     flex-wrap: wrap;
     align-content: center;
     margin: 4rem 0;
+
     h2 {
         grid-row: 1/2;
         grid-column: 2/3;
@@ -134,11 +135,12 @@ div {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
     border-radius: v.$radius;
     overflow: hidden;
-margin: .5rem;
-// img{
-//     max-width: 350px;
-// }    
-p,
+    margin: .5rem;
+
+    // img{
+    //     max-width: 350px;
+    // }    
+    p,
     a {
         padding: 1rem;
         margin: 0;
