--- a/style/_thanks.scss
+++ b/style/_thanks.scss
@@ -15,7 +15,7 @@
 .thanks-body {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../assets/hero.jpg)
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../assets/hero.jpg);
 }
 .thanks-p{
     font-size: 3rem;
