--- a/style/_medium.scss
+++ b/style/_medium.scss
@@ -23,53 +23,91 @@
 // breakpoint at 620 fir header redesign
 // breakpoint at 1516 for faq 
 
-// Header design
-@media only screen and (max-width: 900px) {
-   nav{
-    display:none;
-   }
-   .nav-container{
-    justify-content: center;
-   }
-   .nav-logo{
-    height: 125px;
-   }
+// cards and FAQ
+@media only screen and (max-width: 1030px) {
+    .faq-container {
+        justify-content: center;
+    }
 }
-
-
-// header design
-@media only screen and (max-width: 620px){
-    header {
-        background:rgba(0, 0, 0, 0.621);
-        // background: url(../assets/hero.jpg);
-        // background-size: contain;
-        height:auto;
-    }
-    .header-title-container {
-        padding: 1rem;
-        width: 95%;
-    }
-    .color-overlay{
-        //    height: auto; 
+    // Header design
+    @media only screen and (max-width: 900px) {
+        nav {
+            display: none;
         }
-    .nav-container {
-        width: 100%;
-        background: rgba(0, 0, 0, 0.621);
-    }
-    .mb-header{
-        display: block;
-        width: 100%;
-    }
-    .hero-container{
-        // background: url(../assets/hero.jpg);
-        // background-size:contain;
-        // background-repeat: no-repeat;
-    }
-    
-}
 
-// header {
-//     background: url(../assets/hero.jpg);
+        .nav-container {
+            justify-content: center;
+        }
+
+        .nav-logo {
+            height: 125px;
+        }
+    }
+
+    // CTA Sizing Updates
+    @media only screen and (max-width: 850px) {
+        .cta-headshot {
+            display: none;
+        }
+
+        .cta-container {
+            padding: 2rem;
+        }
+
+    }
+
+    // card design
+    @media only screen and (max-width: 710px) {
+        .card {
+            flex-basis: 100%;
+            flex: 1;
+        }
+    }
+
+    // header design
+    @media only screen and (max-width: 620px) {
+        header {
+            background: #5379921b;
+            // background: url(../assets/hero.jpg);
+            // background-size: contain;
+            height: auto;
+            color: black;
+            p{
+                color: black;
+            }
+        }
+
+        .header-title-container {
+            padding: 1rem;
+            width: 95%;
+        }
+
+        .color-overlay {
+            //    height: auto; 
+            background: none;
+        }
+
+        .nav-container {
+            width: 100%;
+            // background: rgba(0, 0, 0, 0.621);
+            background: #5379921b;
+        }
+
+        .mb-header {
+            display: block;
+            width: 100%;
+        }
+
+        .hero-container {
+            // background: url(../assets/hero.jpg);
+            // background-size:contain;
+            // background-repeat: no-repeat;
+        }
+
+    }
+
+    // header {
+    //     background: url(../assets/hero.jpg);
     //  no-repeat center top #0000005b;
     // background-size: cover;
     // background-blend-mode: lighten;
