gradient bg on header mobile

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -67,6 +67,7 @@ div {
     align-items: center;
     flex-direction: column;
     background: #0000009b;
+    // background: linear-gradient( rgb(0, 0, 0), rgba(0, 0, 0, 0.637));
     height: 100%;
     width: 100%;
     // position: absolute;
