--- a/style/_medium.scss
+++ b/style/_medium.scss
@@ -22,10 +22,14 @@
 // breakpoint at 850 for cta
 // breakpoint at 620 fir header redesign
 // breakpoint at 1516 for faq 
-
+@media only screen and (max-width: 1520px){
+    .faq-container {
+        justify-content: space-evenly;
+    }
+}
 // cards and FAQ
 @media only screen and (max-width: 1030px) {
-    .faq-container {
+    .faq-container, .services-container, .testimonials-wrapper{
         justify-content: center;
     }
 }
@@ -60,21 +64,13 @@
     @media only screen and (max-width: 710px) {
         .card {
             flex-basis: 100%;
-            flex: 1;
         }
     }
 
     // header design
     @media only screen and (max-width: 620px) {
         header {
-            // background: #5379921b;
-            // background: url(../assets/hero.jpg);
-            // background-size: contain;
             height: auto;
-            // color: black;
-            // p{
-            //     color: black;
-            // }
         }
 
         .header-title-container {
@@ -83,38 +79,21 @@
         }
 
         .color-overlay { 
-            // background: none;
-            background: linear-gradient( rgb(0, 0, 0), rgba(0, 0, 0, 0.637));
+            background: linear-gradient( rgb(0, 0, 0), rgba(0, 0, 0, 0.608));
         }
 
         .nav-container {
             width: 100%;
-            // background: rgba(0, 0, 0, 0.621);
-            // background: #5379921b;
-            // britt says white bg on logo if text color stays the same: background: white;
         }
-
-        // .mb-header {
-        //     display: block;
-        //     width: 100%;
-        // }
-
         .hero-container {
             // background: url(../assets/hero.jpg);
             // background-size:contain;
             // background-repeat: no-repeat;
         }
-
+.faq-card{
+    max-width: none;
+}
+.faq-container{
+    width:auto;
+}
     }
-
-    // header {
-    //     background: url(../assets/hero.jpg);
-    //  no-repeat center top #0000005b;
-    // background-size: cover;
-    // background-blend-mode: lighten;
-    // min-height: 100vh;
-    // align-self: stretch;
-    // color: white;
-    // height: 100%;
-    // background-position: center;
-    // background-repeat: no-repeat;
