--- a/style/_main.scss
+++ b/style/_main.scss
@@ -40,7 +40,10 @@ header {
         color: #fff;
     }
 }
-
+.contact-header{
+    background: none;
+    height: auto;
+}
 .header-title-container h2 {
     color: v.$light-accent;
     margin: 0;
