--- a/view/thanks.html
+++ b/view/thanks.html
@@ -9,7 +9,7 @@
 
 <body class="thanks-body">
           <div class="nav-container">
-            <a href="index.html"><img class="nav-logo" src="../assets/KPLogo.png" alt="Business Logo" /></a>
+            <a href="index.html"><img class="nav-logo" src="../assets/KPLogoLBlue.png" alt="Business Logo" /></a>
           </div>
           <section class="thanks-container">
             
