--- a/style/_thanks.scss
+++ b/style/_thanks.scss
@@ -4,21 +4,26 @@
     flex-direction: column;
     margin: auto 0;
     flex-wrap: wrap;
-    align-content: space-around;
-    width: 80%;
+    align-self:center;
     h1{
         color: v.$light-accent;
         margin: 0;
+        
     }
     
 }
 .thanks-body {
-    width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin:auto;
+    width: 80%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../assets/hero.jpg);
+    background-position: center;
 }
 .thanks-p{
-    font-size: 3rem;
+    font-size: 6rem;
+    font-size: clamp(2.5rem, 5vw, 6rem);
     color: white;
     margin: 0;
 }
